<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="string_title_main">My Nanodegree Apps!</string>
    <string name="string_btn_streamer">Spotify Streamer</string>
    <string name="string_btn_scores">Scores App</string>
    <string name="string_btn_library">Library App</string>
    <string name="string_btn_bigger">Build it Bigger</string>
    <string name="string_btn_reader">XYZ Reader</string>
    <string name="string_btn_capstone">Capstone: My Own App</string>
</resources>
